--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,9 +20,10 @@ a {
 
 .lds-roller {
   display: inline-block;
-  position: relative;
-  width: 80px;
-  height: 80px;
+  position: absolute;
+  transform: translate(-50%);
+  top: 50%;
+  left: 50%;
 }
 .lds-roller div {
   animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
@@ -108,10 +109,21 @@ a {
   max-width: 70%;
   height: auto;
   display: flex;
+  align-self: center;
   flex-direction: column;
   align-items: center;
   background-color: #f0f0f0;
   padding: 1rem;
   border-radius: 4px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+}
+
+.shadow {
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  position: fixed;
+  background-color: black;
+  opacity: 0.6;
+  z-index: 888;
 }
